--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "portfolio",
   "private": true,
   "type": "module",
+  "homepage": "http://r-bhatt.github.io/portfolio/",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@react-router/node": "^7.3.0",
@@ -24,6 +27,7 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "clsx": "^2.1.1",
+    "gh-pages": "^6.3.0",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
