--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@biomejs/biome": "1.9.4",
     "@react-router/dev": "^7.3.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
